
* Improved detection of mobile WebKit browser version.
* Detecting Chrome Frame agent string on subrequests now, added unit test for:
  - Internet Explorer with Chrome Frame extension on Windows 7.
* Added unit tests for:
* Detecting WebKit/Blink-based Opera, added unit test for:
  - Opera 15 pre-release on OS X 10.8.3 (using Blink).
  - Opera 15 pre-release on Windows Vista (using Blink).
* Detecting Windows Phone, added unit test for:
  - IE Mobile 7.0 on Windows Phone 7.0.
  - IE Mobile 9.0 on Windows Phone 7.5 (Samsung Focus).
  - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 520).
  - IE Mobile 10.0 on Windows Phone 8.0 (Nokia Lumia 920).
* Additionally, added unit tests for:
  - Mobile WebKit browser inside 1Password app on iPad.
  - MSIE 6.0 with Chrome Frame 11.0 extension.
  - Chrome 28 on OS X 10.8.2.
  - RockMelt 0.16 on OS X 10.8.2.
  - Maxthon 4.0.4 on OS X 10.8.2.


--- CHANGES SINCE UASNIFFER 1.3 (April 16, 2013) -----------------------------

* Now recognizing IE 11 on Windows Blue (based on leaked preliminary agent string).
* Fixed issue detecting Opera Mini 9.80.
* Refactored Opera detection code.
* Removed dead code from Sniffer class.
* Unit testing Sniffer constructor now (must be private).
* Added unit tests for the following user agents:
  - Internet Explorer 11 on Windows Blue (preliminary, leaked).
  - Internet Explorer 10 on Windows 8 64-bit.
  - WPF application on Windows 8.
  - Firefox 16 on OS X 10.8.x.
  - Firefox 19 on OS X 10.8.x.
  - Fennec 9.0 (Firefox Mobile) on Android.
  - Opera 12.10 (prerelease) on OS X 10.8.1.
  - Opera 8.0 masquerading as MSIE 6.0.
  - Opera 8.5 masquerading as MSIE 6.0.
  - Opera 9.2 on Windows Vista.
  - Opera Mini 7.0 on Android.
  - Opera Mini 7.1 on iPad.
  - Opera Mini 9.80.
  - Netscape 8.1 on Windows XP.
  - Opera 7.02 on Windows XP masquerading as MSIE 5.5/6.0.
  - Rockmelt 0.9.72 on OS X 10.8.2.
  - RockMelt 2.1 browser on iPhone running iOS 6.0.1.
  - RockMelt 0.16 on OS X 10.8.1.